<resources>
    <string name="app_name">LEIAQUI.COM</string>
    <string name="alterar">Alterar</string>
    <string name="descricao">Descrição:</string>
    <string name="numeroMaximoDia">Número máximo de dias:</string>
    <string name="taxaMultaAtrasoDevolucao">Taxa de multa por atraso na devolução:</string>
    <string name="nome">Nome:</string>
    <string name="usuario">Usuário:</string>
    <string name="endereco">Endereço:</string>
    <string name="celular">Celular:</string>
    <string name="email">E-mail:</string>
    <string name="cpf">CPF:</string>
    <string name="dataNascimento">Data de nascimento:</string>
    <string name="categoriaLeitor">Categoria de leitor:</string>
    <string name="senha">Senha:</string>
    <string name="isbn">ISBN:</string>
    <string name="titulo">Título:</string>
    <string name="categoriaLivro">Categoria de livro:</string>
    <string name="autor">Autor:</string>
    <string name="palavraChave">Palavras-chave:</string>
    <string name="dataPublicacao">Data de publicação:</string>
    <string name="numeroEdicao">Número de edição:</string>
    <string name="editora">Editora:</string>
    <string name="numeroPagina">Número de páginas:</string>
    <string name="cliente">Cliente:</string>
    <string name="livro">Livro:</string>
    <string name="dataInicial">Data inicial:</string>
    <string name="dataFinal">Data final:</string>
    <string name="status">Status:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="deletar">Deletar</string>
    <string name="login">Entrar ou registrar-se</string>
    <string name="consultar">Consultar</string>
    <string name="livros">Livro</string>
    <string name="categoriaLeitores">Categoria de leitor</string>
    <string name="categoriaLivros">Categoria de livro</string>
    <string name="clientes">Cliente</string>
    <string name="emprestimos">Empréstimo</string>
</resources>